--- a/BlazorTool.Client/Pages/ActivitiesPage.razor
+++ b/BlazorTool.Client/Pages/ActivitiesPage.razor
@@ -291,7 +291,7 @@
                 <WindowAction Name="Close" />
             </WindowActions>
         <WindowContent>
-            <AddActivityForm WorkOrderID="@(CurrentAppointment?.WorkOrderID ?? 0)" OnActivityAdded="OnNewActivityAdded" RecommendedStart="@NewActivityTime"/>
+            <AddActivityForm WorkOrderID="@(CurrentAppointment?.WorkOrderID ?? 0)" OnActivityAdded="OnNewActivityAdded" RecommendedStart="@newActivityInitialStartDate" RecommendedEnd="@newActivityInitialEndDate"/>
         </WindowContent>
     </TelerikWindow>
 
@@ -347,7 +347,6 @@
     private SchedulerView CurrentView { get; set; } = SchedulerView.Month;
     private DateTime DayStart => new DateTime(2000, 1, 1, 7, 0, 0);
     private DateTime DayEnd => new DateTime(2000, 1, 1, 19, 0, 0);
-    private DateTime? NewActivityTime { get; set; } = null;
     private MarkupString cellStyles = new MarkupString(); //for rows colors
     private List<WorkOrder> TakenOrders { get; set; } = new();
     private List<WorkOrder> _allOrders = new();
@@ -889,6 +888,7 @@
             var WO_InSlot = _allAppointments.FirstOrDefault(wo => wo.IsWorkOrder && isWOinTimeSlot(wo, newActivityInitialStartDate, newActivityInitialEndDate))?.GetWorkOrder();
             CurrentActivityFormModel.WorkOrderID = WO_InSlot?.WorkOrderID ?? 0;
             CurrentActivityFormModel.DeviceID = WO_InSlot?.MachineID ?? 0;
+            CurrentActivityFormModel.EndDate = WO_InSlot?.EndDate ?? args.End.AddHours(1);
             showNewActivityForm = true;
             StateHasChanged();        
 
@@ -1089,24 +1089,25 @@
             {
                 CurrentAppointment = _allAppointments.FirstOrDefault(a => a.WorkOrderID == WO_ID_InSlot && a.IsWorkOrder);
                 CurrentActivityFormModel.WorkOrderID = WO_ID_InSlot ?? 0;
-                CurrentActivityFormModel.DeviceID = CurrentAppointment?.GetWorkOrder()?.MachineID ?? 0;                
+                CurrentActivityFormModel.DeviceID = CurrentAppointment?.GetWorkOrder()?.MachineID ?? 0;    
+                CurrentActivityFormModel.EndDate = CurrentAppointment?.End ?? newActivityInitialEndDate; //extend endDate to end of WorkOrder
             }            
             showNewActivityForm = true;
             StateHasChanged();
         }
-        else if(CurrentAppointment != null)//from appointment
+        else if (CurrentAppointment != null && CurrentAppointment.IsWorkOrder)//from appointment (WorkOrder)
         {
             var WO_activities = _allAppointments.Where(a => a.WorkOrderID == CurrentAppointment.WorkOrderID && !a.IsWorkOrder).ToList();
             var lastActivity = WO_activities.OrderByDescending(a => a.End).FirstOrDefault();
             if (lastActivity != null)
             {
-                NewActivityTime = lastActivity.End;
+                newActivityInitialStartDate = lastActivity.End ?? DateTime.Now;
             }
             else
             {
-                NewActivityTime = CurrentAppointment.Start;
+                newActivityInitialStartDate = CurrentAppointment.Start ?? DateTime.Now;
             }
-
+            newActivityInitialEndDate = CurrentAppointment.End ?? DateTime.Now.AddHours(1); //extend endDate to end of WorkOrder
             ShowAddActivityForOrderForm = true;
         }
     }
